--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/articles.html">Articles</a></li>
-      <li><a href="/info.html">Info</a></li>
+      <li><a href="/about.html">About</a></li>
       <li><a href="/reading.html">Reading</a></li>
     </ul>
   </nav>
