--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@
 
         </article>
 
-        <aside class="related-posts">
+        <!--aside class="related-posts">
 
           <h2>Related</h2>
 
@@ -33,22 +33,11 @@
 
         </aside>
 
-      </div> <!-- end .content -->
+      </div> < end .content -->
 
       {% include footer.html %}
 
     </div>
-
-    <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-      try {
-      var pageTracker = _gat._getTracker("UA-109790-5");
-      pageTracker._trackPageview();
-      } catch(err) {}
-    </script>
 
   </body>
 </html>
