--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>{% if page.title %} {{ page.title }} | {% endif %} Josh Brewer</title>
+  <title>{% if page.title %} {{ page.title }} | Josh Brewer {% else %} {{ site.description }} {% endif %}</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
